feat[swagger]: campaign road /campaign/id edit
